Switch material melting recipe to 1 recipe per material instead of 1 per part per material
Really compacts down the recipe page